Removed @Override as compiler was complaining that it was a true override.
Fixed the artifactid to match that used by the gridster library.
Updated version to project.version as recommended.

--- a/vaadin-gridster-demo/pom.xml
+++ b/vaadin-gridster-demo/pom.xml
@@ -86,8 +86,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.vaadin.addons</groupId>
-			<artifactId>GridsterLayout</artifactId>
-			<version>${version}</version>
+			<artifactId>vaadin-gridster</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.vaadin</groupId>
